[project]
name = "tuya-device-handlers"
version = "0.0.0"
description = "Tuya quirks library"
authors = [{ name = "epenet" }]
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
keywords = ["tuya"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dynamic = ["dependencies"]
dependencies = ['tuya-device-sharing-sdk (>=0.2.8)']

[tool.poetry]
requires-poetry = '>=2.0'

[project.urls]
homepage = "https://github.com/home-assistant-libs/tuya-device-handlers"
repository = "https://github.com/home-assistant-libs/tuya-device-handlers"
documentation = "https://github.com/home-assistant-libs/tuya-device-handlers"
Changelog = "https://github.com/home-assistant-libs/tuya-device-handlers/releases"

[tool.poetry.group.dev.dependencies]
codespell = "2.4.2"
covdefaults = "2.3.0"
coverage = { version = "7.14.1", extras = ["toml"] }
pre-commit-hooks = "6.0.0"
prek = "0.4.3"
pylint = "4.0.5"
pytest = "9.0.3"
pytest-asyncio = "1.4.0"
pytest-cov = "7.1.0"
ruff = "0.15.15"
safety = "3.8.1"
syrupy = "5.3.1"
ty = "0.0.42"
yamllint = "1.38.0"
zizmor = "1.25.2"


[tool.coverage.run]
plugins = ["covdefaults"]
source = ["tuya_device_handlers"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ty.environment]
python-version = "3.13"

[tool.codespell]
skip = "node_modules,poetry.lock"

[tool.pylint.MASTER]
ignore = ["tests"]

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T"]

[tool.pylint.DESIGN]
max-attributes = 15

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "abstract-method",
    "cyclic-import",
    "duplicate-code",
    "format",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "unsubscriptable-object",
    "unused-argument",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 80

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "D203",    # Conflicts with other rules
    "D213",    # Conflicts with other rules
    "D417",    # False positives in some occasions
    "PLR2004", # Magic value used in comparison

    # Conflicts with the Ruff formatter
    "COM812",
    "ISC001",


    # Pre-existing patterns (can be tightened over time)
    "ARG002",  # Unused method argument
    "FBT001",  # Boolean type hint positional argument
    "FBT002",  # Boolean default value positional argument
    "FBT003",  # Boolean positional value in call
    "PLR0913", # Too many arguments in function definition
    "PYI041",  # Redundant numeric union (int is subtype of float, but keep for clarity)
    "RUF012",  # Mutable class default
    "TC006",   # Runtime cast value (stylistic, prefer unquoted)
    "TRY003",  # Raise vanilla args
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "A002",    # Argument shadowing a Python builtin
    "S101",    # assert
    "SLF001",  # Private member access
    "PT018",   # Composite assertion
    "PTH123",  # builtin open
    "PTH207",  # glob
    "S108",    # Hardcoded temp file
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["tuya_device_handlers"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
